--- a/src/scheme/solution.package.props
+++ b/src/scheme/solution.package.props
@@ -1,12 +1,12 @@
 ﻿<Project>
   <PropertyGroup>
-    <VersionPrefix>1.1.2</VersionPrefix>
+    <VersionPrefix>1.1.3</VersionPrefix>
     <VersionSuffix></VersionSuffix>
     <Product><![CDATA[Community.RandomOrg]]></Product>
     <Description><![CDATA[A client for the RANDOM.ORG service]]></Description>
     <Authors><![CDATA[Alexander Kozlenko]]></Authors>
     <Copyright><![CDATA[© Alexander Kozlenko. All rights reserved.]]></Copyright>
-    <PackageTags><![CDATA[random.org]]></PackageTags>
+    <PackageTags><![CDATA[random random.org]]></PackageTags>
     <PackageProjectUrl>https://github.com/alexanderkozlenko/random-org</PackageProjectUrl>
     <PackageLicenseUrl>https://raw.github.com/alexanderkozlenko/random-org/master/LICENSE</PackageLicenseUrl>
   </PropertyGroup>
