--- a/src/Community.RandomOrg.Tests/Community.RandomOrg.Tests.csproj
+++ b/src/Community.RandomOrg.Tests/Community.RandomOrg.Tests.csproj
@@ -8,8 +8,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
     <PackageReference Include="System.Data.JsonRpc" Version="1.2.2" />
-    <PackageReference Include="xunit" Version="2.3.0-rc1-build3809" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.0-rc1-build3809" />
+    <PackageReference Include="xunit" Version="2.3.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Community.RandomOrg\Community.RandomOrg.csproj" />
