--- a/src/Community.RandomOrg.Tests/Community.RandomOrg.Tests.csproj
+++ b/src/Community.RandomOrg.Tests/Community.RandomOrg.Tests.csproj
@@ -1,9 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>    
+  <Import Project="$(MSBuildThisFileDirectory)../solution.props" />
+  <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <OutputPath>$(RepositoryPath)/bin/bin/$(AssemblyName)/$(Configuration)/</OutputPath>
+    <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
-    <EmbeddedResource Include=".\Assets\*.json" />
+    <EmbeddedResource Include="./Assets/**/*" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
@@ -12,7 +15,7 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Community.RandomOrg\Community.RandomOrg.csproj" />
+    <ProjectReference Include="../Community.RandomOrg/Community.RandomOrg.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
