Update NuGet dependencies

--- a/src/Community.RandomOrg/Community.RandomOrg.csproj
+++ b/src/Community.RandomOrg/Community.RandomOrg.csproj
@@ -1,11 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Version>1.1.10</Version>
-    <Product><![CDATA[Community.RandomOrg]]></Product>
+    <Version>1.1.11</Version>
     <Description><![CDATA[A client for the RANDOM.ORG service]]></Description>
     <Authors><![CDATA[Alexander Kozlenko]]></Authors>
     <Copyright><![CDATA[© Alexander Kozlenko. All rights reserved.]]></Copyright>
-    <PackageTags><![CDATA[random random.org]]></PackageTags>
+    <PackageTags><![CDATA[random.org random]]></PackageTags>
     <PackageProjectUrl>https://github.com/alexanderkozlenko/random-org</PackageProjectUrl>
     <PackageLicenseUrl>https://raw.github.com/alexanderkozlenko/random-org/master/LICENSE</PackageLicenseUrl>
   </PropertyGroup>
@@ -23,6 +22,6 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="System.Buffers" Version="4.4.0" />
-    <PackageReference Include="System.Data.JsonRpc" Version="1.4.1" />
+    <PackageReference Include="System.Data.JsonRpc" Version="1.4.2" />
   </ItemGroup>
 </Project>
