--- a/src/Community.RandomOrg/Community.RandomOrg.csproj
+++ b/src/Community.RandomOrg/Community.RandomOrg.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Version>1.3.0</Version>
-    <Description><![CDATA[A client for the RANDOM.ORG service]]></Description>
+    <Description><![CDATA[RANDOM.ORG service client based on RANDOM.ORG API v2 (Core APIs)]]></Description>
     <Authors><![CDATA[Alexander Kozlenko]]></Authors>
     <Copyright><![CDATA[© Alexander Kozlenko. All rights reserved.]]></Copyright>
     <PackageTags><![CDATA[random.org random]]></PackageTags>
