--- a/src/Community.RandomOrg.Benchmarks/Community.RandomOrg.Benchmarks.csproj
+++ b/src/Community.RandomOrg.Benchmarks/Community.RandomOrg.Benchmarks.csproj
@@ -2,17 +2,17 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
-    <IsPackable>False</IsPackable>
-    <AppendTargetFrameworkToOutputPath>False</AppendTargetFrameworkToOutputPath>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <IsPackable>false</IsPackable>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.10.14" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="./Assets/**/*" />
+    <EmbeddedResource Include=".\Assets\**\*" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="../Community.RandomOrg/Community.RandomOrg.csproj" />
+    <ProjectReference Include="..\Community.RandomOrg\Community.RandomOrg.csproj" />
   </ItemGroup>
 </Project>
