--- a/src/Community.RandomOrg.Tests/Community.RandomOrg.Tests.csproj
+++ b/src/Community.RandomOrg.Tests/Community.RandomOrg.Tests.csproj
@@ -1,17 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <OutputPath>$(RepositoryPath)/bin/bin/$(AssemblyName)/$(Configuration)/</OutputPath>
-    <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
+    <OutputPath>$(RepositoryPath)\bin\bin\$(AssemblyName)\$(Configuration)\</OutputPath>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
-    <EmbeddedResource Include="./Assets/**/*" />
+    <EmbeddedResource Include=".\Assets\**\*" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="../Community.RandomOrg/Community.RandomOrg.csproj" />
+    <ProjectReference Include="..\Community.RandomOrg\Community.RandomOrg.csproj" />
   </ItemGroup>
 </Project>
