--- a/src/Anemonis.RandomOrg.props
+++ b/src/Anemonis.RandomOrg.props
@@ -2,8 +2,8 @@
 <Project>
   <PropertyGroup>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <VersionPrefix>1.10.3</VersionPrefix>
-    <VersionSuffix></VersionSuffix>
+    <VersionPrefix>1.10.4</VersionPrefix>
+    <VersionSuffix>beta</VersionSuffix>
   </PropertyGroup>
   <PropertyGroup>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
