--- a/src/Anemonis.RandomOrg/Anemonis.RandomOrg.csproj
+++ b/src/Anemonis.RandomOrg/Anemonis.RandomOrg.csproj
@@ -10,7 +10,9 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Anemonis.JsonRpc" Version="1.21.0" />
+    <PackageReference Include="Anemonis.JsonRpc" Version="1.22.0" />
+    <PackageReference Include="Microsoft.CodeQuality.Analyzers" Version="2.9.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.NetCore.Analyzers" Version="2.9.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-18618-05" PrivateAssets="All" />
   </ItemGroup>
 </Project>
