--- a/src/Anemonis.RandomOrg.props
+++ b/src/Anemonis.RandomOrg.props
@@ -11,7 +11,6 @@
     <PackageTags><![CDATA[random.org random randomness]]></PackageTags>
   </PropertyGroup>
   <PropertyGroup Condition="'$(BuildNumber)' != ''">
-    <VersionSuffix Condition="'$(VersionSuffix)' != ''">$(VersionSuffix)-ci-$(BuildNumber)</VersionSuffix>
-    <VersionSuffix Condition="'$(VersionSuffix)' == ''">ci-$(BuildNumber)</VersionSuffix>
+    <VersionSuffix Condition="'$(VersionSuffix)' != ''">$(VersionSuffix)-$(BuildNumber)</VersionSuffix>
   </PropertyGroup>
 </Project>
