Add SonarQube to Azure DevOps build pipeline

--- a/src/Anemonis.RandomOrg.UnitTests/Anemonis.RandomOrg.UnitTests.csproj
+++ b/src/Anemonis.RandomOrg.UnitTests/Anemonis.RandomOrg.UnitTests.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <ProjectGuid>{C422E691-40D4-47C4-A60E-40DFB6F967D5}</ProjectGuid>
     <IsTestable>true</IsTestable>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
