--- a/src/Anemonis.RandomOrg.Benchmarks/Anemonis.RandomOrg.Benchmarks.csproj
+++ b/src/Anemonis.RandomOrg.Benchmarks/Anemonis.RandomOrg.Benchmarks.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <ProjectGuid>{3CDCBD14-A513-43B3-B6C6-9DD5C5C778AA}</ProjectGuid>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <OutputType>Exe</OutputType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
