--- a/src/Anemonis.RandomOrg/Properties/ProjectInfo.props
+++ b/src/Anemonis.RandomOrg/Properties/ProjectInfo.props
@@ -1,13 +1,13 @@
 ﻿<!-- © Alexander Kozlenko. Licensed under the MIT License. -->
 <Project>
   <PropertyGroup>
-    <VersionPrefix>1.13.0</VersionPrefix>
-    <VersionSuffix></VersionSuffix>
+    <VersionPrefix>1.13.1</VersionPrefix>
+    <VersionSuffix>beta</VersionSuffix>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Authors><![CDATA[Alexander Kozlenko]]></Authors>
     <Copyright><![CDATA[© $(Authors). All rights reserved.]]></Copyright>
-    <Description><![CDATA[RANDOM.ORG service client based on Core API (Release 2)]]></Description>
+    <Description><![CDATA[RANDOM.ORG service client based on Core API (Release 3)]]></Description>
     <PackageTags><![CDATA[random.org random randomness]]></PackageTags>
   </PropertyGroup>
   <PropertyGroup Condition="'$(BuildNumber)' != ''">
