Refactor project files and building scripts

--- a/src/Anemonis.RandomOrg/Anemonis.RandomOrg.csproj
+++ b/src/Anemonis.RandomOrg/Anemonis.RandomOrg.csproj
@@ -1,26 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <IsPackable>true</IsPackable>
+    <IsPackageProject>true</IsPackageProject>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <SignAssembly>true</SignAssembly>
-    <GenerateDependencyFile>false</GenerateDependencyFile>
-    <PackageIcon>PackageIcon.png</PackageIcon>
-    <SonarQubeExclude>false</SonarQubeExclude>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-  </PropertyGroup>
-  <ItemGroup>
-    <None Update="Properties\PackageIcon.png">
-      <Pack>true</Pack>
-      <PackagePath>PackageIcon.png</PackagePath>
-    </None>
-  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Anemonis.JsonRpc" Version="1.24.1" />
-    <PackageReference Include="Microsoft.CodeQuality.Analyzers" Version="2.9.8" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.NetCore.Analyzers" Version="2.9.8" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.CodeQuality.Analyzers" Version="2.9.8" />
+    <PackageReference Include="Microsoft.NetCore.Analyzers" Version="2.9.8" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" />
   </ItemGroup>
-  <Import Project="**\*.props" />
 </Project>
