--- a/src/Anemonis.RandomOrg/Properties/ProjectInfo.props
+++ b/src/Anemonis.RandomOrg/Properties/ProjectInfo.props
@@ -1,16 +1,12 @@
-﻿<!-- © Alexander Kozlenko. Licensed under the MIT License. -->
-<Project>
+﻿<Project>
   <PropertyGroup>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <VersionPrefix>1.13.1</VersionPrefix>
     <VersionSuffix>beta</VersionSuffix>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Authors><![CDATA[Alexander Kozlenko]]></Authors>
     <Copyright><![CDATA[© $(Authors). All rights reserved.]]></Copyright>
     <Description><![CDATA[RANDOM.ORG service client based on Core API (Release 3)]]></Description>
     <PackageTags><![CDATA[random.org random randomness]]></PackageTags>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(BuildNumber)' != ''">
-    <VersionSuffix Condition="'$(VersionSuffix)' != ''">$(VersionSuffix)-$(BuildNumber)</VersionSuffix>
   </PropertyGroup>
 </Project>
