--- a/src/Anemonis.RandomOrg.Benchmarks/Anemonis.RandomOrg.Benchmarks.csproj
+++ b/src/Anemonis.RandomOrg.Benchmarks/Anemonis.RandomOrg.Benchmarks.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <IsDevelopmentProject>true</IsDevelopmentProject>
+    <IsTestingProject>true</IsTestingProject>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputType>Exe</OutputType>
   </PropertyGroup>
