Upgrade to .NET 5.0

--- a/src/Anemonis.RandomOrg.EndToEndTests/Anemonis.RandomOrg.EndToEndTests.csproj
+++ b/src/Anemonis.RandomOrg.EndToEndTests/Anemonis.RandomOrg.EndToEndTests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <IsTestingProject>true</IsTestingProject>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Anemonis.RandomOrg\Anemonis.RandomOrg.csproj" />
