--- a/src/Anemonis.RandomOrg/Properties/ProjectInfo.props
+++ b/src/Anemonis.RandomOrg/Properties/ProjectInfo.props
@@ -1,8 +1,8 @@
 ﻿<Project>
   <PropertyGroup>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <VersionPrefix>1.14.0</VersionPrefix>
-    <VersionSuffix></VersionSuffix>
+    <VersionPrefix>1.15.0</VersionPrefix>
+    <VersionSuffix>beta</VersionSuffix>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Authors><![CDATA[Alexander Kozlenko]]></Authors>
     <Copyright><![CDATA[© $(Authors). All rights reserved.]]></Copyright>
