--- a/src/Anemonis.RandomOrg/Anemonis.RandomOrg.csproj
+++ b/src/Anemonis.RandomOrg/Anemonis.RandomOrg.csproj
@@ -1,12 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <IsPackageProject>true</IsPackageProject>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Anemonis.JsonRpc" Version="1.24.2" />
-    <PackageReference Include="Microsoft.CodeQuality.Analyzers" Version="3.3.1" />
-    <PackageReference Include="Microsoft.NetCore.Analyzers" Version="3.3.1" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" />
   </ItemGroup>
   <Import Project="..\Solution.Build.Library.targets" />
